[tool.poetry]
name = "issue-test"
version = "0.1.0"
description = "Issue Test project"
authors = [
    "santosh.hegde4@gmail.com"
]
readme = "README.md"
exclude = ["tests/*", "docs/*"]  # Exclude source files from the wheel

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">=2.6.0,<=2.9.2"
PyGithub = "^2.4.0"
pygit2 = "^1.14.0"
cookiecutter = "^2.1.1"
black = "^25.1.0"
rdflib = "^7.1.1"
pyspark = "^3.5.0"
python-slugify = "^8.0.3"
colorlog = "^6.7.0"
toml = "^0.10.2"
termcolor = "^2.4.0"
requests = "^2.28.0"
sqlalchemy = "^2.0.31"
pydot = "^3.0.2"
graphql-core = "^3.2.3"
pylint-pydantic = "^0.3.2"
rich = "^13.7.1"
sparkdantic = "^1.2.1"
isodate = "^0.7.2"

[tool.poetry.dev-dependencies]
mypy = "*"
pylint = "*"
black = "*"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.30.0.0"
types-toml = "^0.10.8.6"
types-colorama = "^0.4.15.11"
types-typed-ast = "^1.5.8.6"
types-python-slugify = "^8.0.0.1"
types-python-dateutil = "^2.8.19.20240106"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
rdf = ["rdflib"]
pandas = ["pandas", "pandas-stubs"]
pyspark = ["pyspark"]
dotfiles = ["pydot"]
graphql = ["graphql-core"]

[tool.pylint.main]
load-plugins = "pylint_pydantic"
extension-pkg-whitelist = "pydantic"
disable = ["C0114", "C0115", "C0116", "R0903", "R0401", "E0102"]

[tool.pylint.basic]
module-naming-style = "any"

[tool.pylint.reports]
output-format = "colorized"
